step_3_1/kubernetes/deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: project-deployment
  namespace: eleven
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: ouite/eleven-k8s-workshop-nginx
        ports:
        - containerPort: 80
      - name: php
        image: ouite/eleven-k8s-workshop-php
        ports:
        - containerPort: 9000
