step_3_1/kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: project-ingress
  namespace: eleven
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: "project.192.168.99.102.nip.io"
    http:
      paths:
      - backend:
          serviceName: project-service
          servicePort: 80
